<resources>
    <string name="app_name">Platzigram</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_login">Login</string>
    <string name="dont_have_account">¿No pose cuenta?, </string>
    <string name="create_here">crea una aqui</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_user">User</string>
    <string name="hint_password_createaccount">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="text_joinUs">Join us</string>
    <string name="toolbar_title_create_account">Crear cuenta</string>
    <string name="username_card">Elias2303</string>
    <string name="firstWord_card">Hace</string>
    <string name="timeCard_card">4 dias</string>
    <string name="likeNumber_card">10 me gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="like_number_card">15</string>
    <string name="like_detail">Me gusta</string>
    <string name="title_image">\"Todo copas de playa\"</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="transition_name_picture">transitionnamepicture</string>
    <string name="title_activity_new_post">NewPostActivity</string>
    <string name="hint_title">Titulo</string>
    <string name="hint_description">Descripción</string>
    <string name="createPost">Crear post</string>

    <string name="facebook_app_id">1490917794331247</string>
    <string name="fb_login_protocol_scheme">fb1490917794331247</string>
    <string name="menu_sign_out">Cerrar sesión</string>
    <string name="menu_about">Acerca de</string>


</resources>
