<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.erivas.platzigram.view.CreateAccountActivity"
    >


    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    android:layout_marginTop="@dimen/edit_text_margin_create_account"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email"
                        android:hint="@string/hint_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    android:layout_marginTop="@dimen/edit_text_margin_create_account"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/name"
                        android:hint="@string/hint_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    android:layout_marginTop="@dimen/edit_text_margin_create_account"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/user"
                        android:hint="@string/hint_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    android:layout_marginTop="@dimen/edit_text_margin_create_account"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password_createaccount"
                        android:hint="@string/hint_password_createaccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    android:layout_marginTop="@dimen/edit_text_margin_create_account"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/confirm_password"
                        android:hint="@string/hint_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/joinUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_joinUs"
                    android:theme="@style/RaiseButtonDark" />

            </LinearLayout>




    </ScrollView>





</android.support.design.widget.CoordinatorLayout>
