<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.erivas.platzigram.login.view.LoginActivity"
    android:background="@color/colorPrimary"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/platzigram"
            android:onClick="goToWebPage"
            />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="vertical"
            android:padding="@dimen/padding_horizontal_login"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextWhite"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:hint="@string/hint_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextWhite"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:hint="@string/hint_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_login"
                android:theme="@style/RaiseButtonDark"
                />

            <RelativeLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/dontHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_dont_have_account"
                    />

                <TextView
                    android:id="@+id/createHere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_here"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_dont_have_account"
                    android:layout_toRightOf="@+id/dontHaveAccount"

                    />

                <ProgressBar
                    android:id="@+id/progressBar_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>


        </LinearLayout>




    </ScrollView>


</LinearLayout>


</android.support.design.widget.CoordinatorLayout>