<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.erivas.platzigram.view.PictureDetailActivity"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBarLayout_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            >

            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@drawable/image"
                app:layout_collapseMode="parallax"
                android:transitionName="@string/transition_name_picture"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>



    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            >

            <TextView
                android:id="@+id/username_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/username_size_detail"
                android:text="@string/username_card"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                >
                <TextView
                    android:id="@+id/like_number_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/like_number_size_detail"
                    android:text="@string/like_number_card"
                    android:paddingLeft="@dimen/activity_vertical_margin"

                    android:paddingBottom="@dimen/activity_vertical_margin"
                    />
                <TextView
                    android:id="@+id/second_word_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/like_number_size_detail"
                    android:text="@string/like_detail"
                    android:paddingLeft="@dimen/sencond_word"
                    android:paddingRight="@dimen/sencond_word"
                    />


            </LinearLayout>
            
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_divider"
                android:background="@android:color/darker_gray"
                />

            <TextView
                android:id="@+id/titleImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/like_number_size_detail"
                android:text="@string/title_image"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:paddingTop="@dimen/activity_vertical_margin"
                />

            <TextView
                android:id="@+id/text_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/like_number_size_detail"
                android:text="@string/lorem"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/text_content"
                android:paddingRight="@dimen/text_content"
                />


        </LinearLayout>




    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/heart"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="bottom|end"

        />



</android.support.design.widget.CoordinatorLayout>