<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="5dp"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/imageCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@drawable/image"
            android:scaleType="centerCrop"
            android:contentDescription="sdaasdas" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/background_text_card"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/usernameCard"
                android:text="@string/username_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize_card"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/firstWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstWord_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstWord_card"

                    />

                <TextView
                    android:id="@+id/timeCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeCard_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstWord_card"
                    android:layout_marginLeft="5dp"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    />
                <TextView
                    android:id="@+id/likeNumberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likeNumber_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstWord_card"
                    android:layout_marginLeft="5dp"

                    />

            </LinearLayout>
            
            
        </LinearLayout>

    </FrameLayout>




</android.support.v7.widget.CardView>

